# QTProjects

QT_Widgets/: .gitignore
QT_examples/EchoServer & Client/EchoClientApp/: widget.cpp  widget.h
QT_examples/EchoServer & Client/EchoServerApp/: widget.cpp  widget.h
QT_examples/SqlApp/: SqlApp.pro  SqlApp.pro.user.5d712db  main.cpp
QT_examples/ThreadApp/: ThreadApp.pro  ThreadApp.pro.user.5d712db  thread.cpp  thread.h  widget.cpp  widget.h
QT_examples/miniproject2/: CSApp.pro  CSApp.qrc  clientitem.cpp  clientitem.h  clientmanagerform.cpp  clientmanagerform.h  clientmanagerform.ui  mainwindow.cpp  mainwindow.ui
QT_veda/Checkbox_example/: CMakeLists.txt  widget.cpp  widget.h
QT_veda/Layouts/: CMakeLists.txt  dialog.cpp  dialog.h  dialog.ui
QT_veda/QtEditorApp/: QtEditorApp.pro  QtEditorApp.pro.user.e41e8d0  qteditor.cpp  qteditor.h  qteditor.qrc
QT_veda/QtWidget_Calculator/: CMakeLists.txt  widget.cpp  widget.h  widget.ui
QT_veda/Qt_TextEditor/: CMakeLists.txt  icons.qrc  mainwindow.cpp  mainwindow.h
QT_veda/mini_project_1/: CMakeLists.txt  client.cpp  client.h  clientmanager.cpp  clientmanager.h  main.cpp  product.cpp  product.h  productmanager.cpp  productmanager.h  shoppingmanager.cpp  shoppingmanager.h
